Fix alignment issues on Navbar and footer, fix folder locations.

--- a/css/templateStyle.css
+++ b/css/templateStyle.css
@@ -12,7 +12,7 @@ body {
 /*        grid-gap: 1em;*/
     height: 100vh;
     grid-template-columns: 20% 20% 20% 20% 20%; 
-    grid-template-rows: 7% 35% 24% 24% 10%;
+    grid-template-rows: 7% 30% 24% 24% 10%;
   }
 
 #nav {
@@ -189,7 +189,7 @@ background: #ccc;
 /*        grid-gap: 1em;*/
     height: 100vh;
     grid-template-columns: 25% 25% 25% 25%; 
-    grid-template-rows: 7% 35% 24% 24% 10%;
+    grid-template-rows: 7% 30% 24% 24% 10%;
   }
 
 #t1 {
